# vibrato-rkyv

./: .gitattributes  Cargo.toml  README.md
.github/workflows/: rust.yml
benchmark/: Cargo.toml
benchmark/src/: main.rs
compile/: Cargo.toml
compile/src/: main.rs
compiler/: Cargo.toml
compiler/src/: build.rs  dictgen.rs  full_build.rs  main.rs  train.rs  transmute_legacy.rs
dictgen/: Cargo.toml
dictgen/src/: main.rs
evaluate/: Cargo.toml
evaluate/src/: main.rs  split.rs
examples/basic_usage/: Cargo.toml  main.rs
examples/manual_load/: Cargo.toml  main.rs
map/: Cargo.toml
map/src/: main.rs  reorder.rs
tokenize/: Cargo.toml
tokenize/src/: main.rs
train/: Cargo.toml
train/src/: main.rs
vibrato/: Cargo.toml  README.md
vibrato/benches/: tokenization.rs  tokenization_sudachi.rs  vibrato_init.rs  vibrato_init_bench.rs  vibrato_init_zstd.rs  vibrato_rkyv_init.rs  vibrato_rkyv_init_bench.rs
vibrato/benches/init_benchmark/: main.rs
vibrato/benches/resources/: waganeko.txt
vibrato/src/: common.rs  dictionary.rs  errors.rs  lib.rs  num.rs  sentence.rs  token.rs  tokenizer.rs  trainer.rs
vibrato/src/dictionary/: builder.rs  character.rs  config.rs  connector.rs  fetch.rs  lexicon.rs  mapper.rs  unknown.rs  word_idx.rs
vibrato/src/dictionary/connector/: dual_connector.rs  matrix_connector.rs  raw_connector.rs
vibrato/src/dictionary/connector/raw_connector/: scorer.rs
vibrato/src/dictionary/lexicon/: feature.rs  map.rs  param.rs
vibrato/src/dictionary/lexicon/map/: posting.rs  trie.rs
vibrato/src/legacy/: common.rs  dictionary.rs  errors.rs  mod.rs  num.rs
vibrato/src/legacy/dictionary/: character.rs  connector.rs  lexicon.rs  mapper.rs  unknown.rs
vibrato/src/legacy/dictionary/connector/: dual_connector.rs  matrix_connector.rs  raw_connector.rs
vibrato/src/legacy/dictionary/connector/raw_connector/: scorer.rs
vibrato/src/legacy/dictionary/lexicon/: feature.rs  map.rs  param.rs
vibrato/src/legacy/dictionary/lexicon/map/: posting.rs  trie.rs
vibrato/src/tests/: lexicon.rs  loading_tests.rs  tokenizer.rs
vibrato/src/tokenizer/: lattice.rs  nbest_generator.rs  worker.rs
vibrato/src/trainer/: config.rs  corpus.rs  feature_extractor.rs  feature_rewriter.rs  model.rs
