[package]
name = "evaluate"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "evaluate"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }  # MIT or Apache-2.0
csv-core = "0.1.13"  # Unlicense or MIT
rand = "0.10.0"  # MIT or Apache-2.0
vibrato-rkyv = { path = "../vibrato" }  # MIT or Apache-2.0

[[bin]]
name = "split"
path = "src/split.rs"
