[package]
name = "map"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "map"

[dependencies]
vibrato-rkyv = { path = "../vibrato" }
clap = { version = "4.0", features = ["derive"] }  # MIT or Apache-2.0
zstd = "0.13.3"  # MIT
rkyv = "0.8.12"

[[bin]]
name = "reorder"
path = "src/reorder.rs"
