[package]
name = "vibrato-rkyv"
# NOTE(kampersanda): Developers should check compatibility with MODEL_MAGIC in dictionary.rs.
version = "0.6.12"
edition = "2024"
authors = [
    "stellanomia <fulmlumo@gmail.com>",
    "Shunsuke Kanda <shnsk.knd@gmail.com>",
    "Koichi Akabe <vbkaisetsu@gmail.com>",
]
description = "Vibrato: viterbi-based accelerated tokenizer with rkyv support for fast dictionary loading."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/stellanomia/vibrato-rkyv"
repository = "https://github.com/stellanomia/vibrato-rkyv"
readme = "../README.md"
keywords = ["japanese", "analyzer", "tokenizer", "morphological"]
categories = ["text-processing"]

[dependencies]
csv-core = "0.1.13"
dirs = "6.0.0"
hashbrown = "0.15.5"
hex = "0.4.3"
log = "0.4.28"
memmap2 = "0.9.8"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["blocking"], optional = true }
sha2 = "0.10.9"
tar = { version = "0.4.44", optional = true }
tempfile = "3.23.0"
thiserror = "2.0.17"
walkdir = { version = "2.5.0", optional = true }
xz2 = { version = "0.1.7", optional = true }
zstd = "0.13.3"

rkyv = { version = "0.8.12", features = ["hashbrown-0_15"] }
crawdad-rkyv = "0.4.0-rkyv.1"
rucrf-rkyv = { version = "0.3.3-rkyv.1", optional = true }

bincode = { version = "2.0.1", default-features = false, features = ["std", "alloc", "derive"], optional = true }
crawdad = { version = "0.4.0", optional = true }
rucrf = { version = "0.3.3", optional = true }

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
vibrato = "0.5.2"
sudachi = { git = "https://github.com/WorksApplications/sudachi.rs.git", rev = "54e85e8f7e0a6c4b570cd7b103506b080dc60c92" }
xz2 = "0.1.7"
zip = "6.0.0"

[features]
default = ["train", "download"]

train = ["rucrf-rkyv"]
download = ["dep:reqwest", "dep:tar", "dep:xz2", "dep:walkdir"]
legacy = ["dep:bincode", "dep:crawdad", "dep:rucrf"]

[[bench]]
name = "vibrato_init"
harness = false

[[bench]]
name = "vibrato_init_zstd"
harness = false

[[bench]]
name = "vibrato_rkyv_init"
harness = false

[[bench]]
name = "tokenization"
harness = false
required-features = ["legacy"]

[[bench]]
name = "tokenization_sudachi"
harness = false
